@@ -1,14 +1,20 @@
 PORTNAME=			bash
-PORTVERSION=		4.4
+PATCHLEVEL=	5
+PORTVERSION=            4.4.${PATCHLEVEL:S/^0//g}
 PORTREVISION?=	0
 CATEGORIES=		shells
 COMMENT=		GNU Project's Bourne Again SHell
 MAINTAINER=		zoon1@nas4free.org
 
-
 MASTER_SITES=		GNU/${PORTNAME}
+DISTNAME=		${PORTNAME}-${PORTVERSION:R}
 DIST_SUBDIR=		${PORTNAME}
-EXTRACT_ONLY=				${DISTNAME}${EXTRACT_SUFX}
+EXTRACT_ONLY=		${DISTNAME}${EXTRACT_SUFX}
+
+PATCH_SITES=		GNU/${PORTNAME}/${DISTNAME}-patches/
+PATCHFILES!=		/usr/bin/jot -s " " -w \
+				${PORTNAME}${PORTVERSION:R:S/.//g}-%03d \
+				${PATCHLEVEL} 1 ${PATCHLEVEL} 
 
 OPTIONS_DEFINE=         IMPLICITCD COLONBREAKSWORDS 
 OPTIONS_DEFAULT=        IMPLICITCD COLONBREAKSWORDS 
@@ -21,17 +27,17 @@ GNU_CONFIGURE=  yes
 USES=		  bison
 USE_GETTEXT=	  yes
 CONFIGURE_ARGS=	--without-bash-malloc \
-								--disable-rpath \
-								--enable-disabled-builtins \
-								--with-libiconv-prefix=${ICONV_PREFIX} \
-								--disable-help-builtin \
-								--disable-static-link
-CPPFLAGS+=			${PTHREAD_CFLAGS} \
-								-I${LOCALBASE}/include
+					--disable-rpath \
+					--enable-disabled-builtins \
+					--with-libiconv-prefix=${ICONV_PREFIX} \
+					--disable-help-builtin \
+					--disable-static-link
+CPPFLAGS+=	${PTHREAD_CFLAGS} \
+					-I${LOCALBASE}/include
 LDFLAGS+=				-L${LOCALBASE}/lib
 CONFIGURE_ENV=	CPPFLAGS="${CPPFLAGS}" \
-								LDFLAGS="${LDFLAGS}" \
-								YACC="bison"
+					LDFLAGS="${LDFLAGS}" \
+					YACC="bison"
 
 .include <bsd.port.pre.mk>
 
@@ -40,7 +46,7 @@ post-patch:
 
 post-configure:
 	@${FIND} ${WRKSRC} -name Makefile -print0 | ${XARGS} -0 \
-		${REINPLACE_CMD} -e "s|^DESTDIR *=|& ${DESTDIR}|"
+	${REINPLACE_CMD} -e "s|^DESTDIR *=|& ${DESTDIR}|"
 
 pre-build:
 	@${ECHO_CMD} $$((${PORTREVISION}-1)) > ${WRKSRC}/.build
@@ -60,7 +66,7 @@ cklatest:
 	@${ECHO} -n "Currently at: "
 	@${MAKE} -V PATCHLEVEL
 	-ncftpls \
-	    ftp://ftp.cwru.edu/pub/${PORTNAME}/${PORTNAME}-${PORTVERSION:C/\.[0-9a-z]*$//}-patches/ \
+		${PATCH_SITES:Mftp*:Ox:[1]} \
 		| fgrep -v .sig | ${TAIL}
 
 .include <bsd.port.post.mk>
