@@ -32,7 +32,6 @@ Changes:
 - Upgrade sudo to 1.8.18.
 - Upgrade dialog to 1.3-20160828.
 - Upgrade jQuery to 3.1.1.
-- Upgrade bash to 4.4.
 - Upgrade inadyn-mt to 02.28.10.
 - Upgrade tmux to 2.3.
 - Upgrade virtualbox-ose to 5.1.8.
@@ -45,6 +44,7 @@ Changes:
 - Upgrade php to 7.0.13.
 - Upgrade syncthing to 0.14.11.
 - Upgrade msmtp to 1.6.6.
+- Upgrade bash to 4.4 patch 5.
 
 Fixes:
 - Fix prevent deletion of mounted gconcat softraid.
